src/objects/loan__Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account_Balance__c</fullName>
        <description>Reflects the account balance after each transaction</description>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Closing_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Debit__c</fullName>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__GL_Balance_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GL Balance Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <description>A unique id for the element.</description>
        <label>Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__MF_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MF Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected GL is a master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>TransactionEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Opening_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Sub_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Sub Ledger</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Sub_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Ledger</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__ToBeDeleted__c</fullName>
        <label>ToBeDeleted</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <formula>loan__Transaction__r.loan__Transaction_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>loan__Transaction__c</referenceTo>
        <relationshipName>TransactionEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Entry</label>
    <nameField>
        <displayFormat>TEID-{0000000000}</displayFormat>
        <label>Transaction Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Account_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(VLOOKUP($ObjectType.loan__MF_Account__c.Fields.Name, $ObjectType.loan__MF_Account__c.Fields.Name,  loan__MF_Account__r.Name  ))</errorConditionFormula>
        <errorDisplayField>loan__MF_Account__c</errorDisplayField>
        <errorMessage>Enter a valid account</errorMessage>
    </validationRules>
</CustomObject>